--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     testmodels:
         strategy:
             matrix:
-                os: [ubuntu-24.04]
+                os: [ubuntu-ubuntu-latest]
                 testmode: [OFF, ON]
                 testname:
                     [
@@ -296,7 +296,7 @@ jobs:
     combine_checksums:
         needs: testmodels
         if: always()
-        runs-on: ubuntu-24.04
+        runs-on: ubuntu-ubuntu-latest
         steps:
             - name: Download test output
               uses: actions/download-artifact@v4
