--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -33,7 +33,7 @@ jobs:
                   cppcheck --force --language=c++ --std=c++20 --enable=style --suppress=knownConditionTrueFalse --check-level=exhaustive .
 
     clang-format:
-        runs-on: ubuntu-ubuntu-latest
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
 
@@ -112,7 +112,7 @@ jobs:
                 openmp: [ON, OFF]
             fail-fast: false
 
-        runs-on: ubuntu-ubuntu-latest
+        runs-on: ubuntu-latest
         name: ${{ matrix.compiler.name }} ${{ matrix.compiler.ver }}${{ matrix.mpi == 'ON' && ' MPI' || ''}}${{ matrix.openmp == 'ON' && ' OpenMP' || ''}}
         steps:
             - uses: actions/checkout@v4
