--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,7 +116,7 @@ jobs:
               run: |
                   cp input-newrun.txt input.txt
                   touch output_0-0.txt
-                  time mpirun -np 4 --oversubscribe ./sn3d
+                  time mpirun -np 4 --oversubscribe --mca mpi_yield_when_idle 1 ./sn3d
 
             - name: Move job0 files
               if: always()
@@ -147,7 +147,7 @@ jobs:
               working-directory: tests/${{ matrix.testname }}_testrun/
               run: |
                   cp input-resume.txt input.txt
-                  time mpirun -np 4 --oversubscribe ./sn3d
+                  time mpirun -np 4 --oversubscribe --mca mpi_yield_when_idle 1 ./sn3d
 
             - name: Move job1 files
               if: always()
