--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -251,7 +251,7 @@ jobs:
               if: always() && matrix.testmode == 'OFF' && startsWith(matrix.testname, 'classicmode_1d')
               working-directory: tests/
               run: |
-                  at plotspectra --frompackets -t 4-6 -plotvspecpol 0 1 2 3 12 13 14 ${{ matrix.testname }}_testrun
+                  at plotspectra -t 4-6 -plotvspecpol 0 1 2 3 12 13 14 --frompackets ${{ matrix.testname }}_testrun
 
             - name: Plot spectrum kilonova
               if: always() && matrix.testmode == 'OFF' && startsWith(matrix.testname, 'kilonova')
