--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,11 @@
     },
     "[yaml]": {
         "editor.tabSize": 4
-    }
+    },
+    "files.eol": "\n",
+    "files.trimFinalNewlines": true,
+    "files.insertFinalNewline": true,
+    "files.trimTrailingWhitespace": true,
+    "editor.formatOnType": true,
+    "editor.formatOnSave": true
 }
