--- a/.gitattributes
+++ b/.gitattributes
@@ -6,9 +6,11 @@
 *.h text eol=lf linguist-language=C++
 *.sh text eol=lf
 *.txt text eol=lf
+* text eol=lf
 Makefile text eol=lf
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
 *.gz binary
+.zstd binary
