--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,7 @@ repos:
           - id: check-yaml
           - id: detect-private-key
           - id: destroyed-symlinks
+          - id: end-of-file-fixer
           - id: fix-byte-order-marker
           - id: forbid-new-submodules
           - id: mixed-line-ending
