--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -182,7 +182,7 @@ jobs:
                   uv pip install --system -U artistools
 
             - name: show deposition.out
-              if: always()
+              if: always() && matrix.testmode == 'OFF'
               working-directory: tests/${{ matrix.testname }}_testrun/
               run: |
                   echo -e "import artistools as at; import polars as pl;\nwith pl.Config(tbl_rows=-1,tbl_cols=-1,tbl_width_chars=300,tbl_formatting='NOTHING'):\n    df = at.get_deposition('.')\n    print(df.select(['timestep', 'tmid_days'] + [c for c in sorted(df.columns, key=lambda x: x.lower().lstrip('eps_')) if c not in ['timestep', 'tmid_days', 'tmid_s']]))" | python3 -
