--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
                         kilonova_1d_1dgrid,
                         kilonova_1d_3dgrid,
                         kilonova_2d_2dgrid,
+                        kilonova_2d_2dgrid_barnesthermalisation,
                         kilonova_2d_2dgrid_expansionopac,
                         kilonova_2d_2dgrid_xcomgammaphotoion,
                         kilonova_2d_3dgrid,
