--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,32 +21,11 @@ repos:
           - id: mixed-line-ending
             args: [--fix=lf]
           - id: trailing-whitespace
-    - repo: https://github.com/pocc/pre-commit-hooks
-      rev: v1.3.5
+    - repo: https://github.com/pre-commit/mirrors-clang-format
+      rev: 'v18.1.6'
       hooks:
           - id: clang-format
-            args: [--version=18, -i]
-          #   - id: clang-tidy
-          #     args: [-extra-arg=-std=c++20]
-          # - id: oclint
-          # - id: uncrustify
-          # - id: cppcheck
-          #   args:
-          #       [
-          #           -q,
-          #           --error-exitcode=1,
-          #           --force,
-          #           '--enable=performance,portability',
-          #           --language=c++,
-          #           --std=c++20,
-          #           --suppress=unmatchedSuppression,
-          #           --suppress=missingIncludeSystem,
-          #           --suppress=unusedFunction,
-          #       ]
-          # - id: cpplint
-          #   args: [--linelength=120, '--filter=-legal/copyright,-readability/casting,-whitespace/braces,-readability/todo']
-          # - id: include-what-you-use
-          #   args: [--cxx17ns, --update_comments]
+            files: '\.(c|cc|cpp|h|hpp|cxx|hh|inc)$'
     - repo: local
       hooks:
           - id: make
