--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -172,6 +172,14 @@ jobs:
                   make clean
                   make MPI=${{matrix.mpi}} OPENMP=${{matrix.openmp}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
 
+            - name: Compile classic mode for OpenMP GPU-offload
+              if: matrix.compiler.name == 'nvc++' && matrix.openmp == 'ON'
+              run: |
+                  $CXX -v
+                  cp -v -p artisoptions_classic.h artisoptions.h
+                  make clean
+                  make MPI=${{matrix.mpi}} GPU=ON OPENMP=${{matrix.openmp}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
+
             - name: Compile classic mode STDPAR=ON
               if: matrix.openmp != 'ON'
               run: |
@@ -179,6 +187,14 @@ jobs:
                   cp -v -p artisoptions_classic.h artisoptions.h
                   make clean
                   make MPI=${{matrix.mpi}} OPENMP=${{matrix.openmp}} STDPAR=ON -j${{ steps.cpu-count.outputs.count}} sn3d exspec
+
+            - name: Compile classic mode STDPAR=ON GPU=ON
+              if: matrix.openmp != 'ON' && matrix.compiler.name == 'nvc++'
+              run: |
+                  $CXX -v
+                  cp -v -p artisoptions_classic.h artisoptions.h
+                  make clean
+                  make MPI=${{matrix.mpi}} GPU=ON STDPAR=ON -j${{ steps.cpu-count.outputs.count}} sn3d exspec
 
             - name: Compile nebular mode
               run: |
