--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -144,6 +144,8 @@ jobs:
               if: matrix.compiler.name == 'nvc++'
               with:
                   log-file-suffix: '${{matrix.compiler.ver}}.txt'
+                  method: 'network'
+                  sub-packages: ['nvcc', 'cudart']
 
             - name: Set nvc++ as compiler
               if: matrix.compiler.name == 'nvc++'
