std::vector ch_all_levels

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,8 +139,8 @@ jobs:
               run: cat job0/output_0-0.txt
 
             - name: Checksum job0 output files
-              if: always()
-              #if: always() && matrix.testmode == 'OFF'
+              #if: always()
+              if: always() && matrix.testmode == 'OFF'
               working-directory: tests/${{ matrix.testname }}_testrun
               run: |
                   md5sum *.out job0/*.out | tee ../${{ matrix.testname }}_inputfiles/results_md5_job0.txt
@@ -206,8 +206,8 @@ jobs:
                   cat exspec.txt
 
             - name: Checksum job1 output files
-              if: always()
-              #if: always() && matrix.testmode == 'OFF'
+              #if: always()
+              if: always() && matrix.testmode == 'OFF'
               working-directory: tests/${{ matrix.testname }}_testrun
               run: |
                   md5sum *.out job1/*.out | tee ../${{ matrix.testname }}_inputfiles/results_md5_final.txt
