--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,6 +139,7 @@ jobs:
               run: cat job0/output_0-0.txt
 
             - name: Checksum job0 output files
+              #if: always()
               if: always() && matrix.testmode == 'OFF'
               working-directory: tests/${{ matrix.testname }}_testrun
               run: |
@@ -205,6 +206,7 @@ jobs:
                   cat exspec.txt
 
             - name: Checksum job1 output files
+              #if: always()
               if: always() && matrix.testmode == 'OFF'
               working-directory: tests/${{ matrix.testname }}_testrun
               run: |
